# Theme-trader

./: .env  .env.example  .gitignore  README.md  package-lock.json  vercel.json
backend/: .env.example  README.md  pyproject.toml  requirements.txt  seed_db.py  test_auth.py  test_endpoints.py  test_llm_live.py  test_llm_parsing.db  test_llm_parsing.py  theme_trader.db
backend/app/: alpaca_stream.py  cache_service.py  crud.py  database.py  interests_util.py  llm_service.py  main.py  models.py  schemas.py  security.py  stock_selector.py  tavily_research.py
front_end/: README.md  package-lock.json  package.json  vite.config.js
front_end/src/: App.css  App.jsx  AuthContext.jsx  Dashboard.css  Dashboard.jsx  FundSummary.jsx  FundViz.jsx  Login.jsx  OnboardingForm.css  OnboardingForm.jsx  PriceChart.jsx  ProtectedRoute.jsx  RouteErrorBoundary.jsx  categoryMeta.js  config.js  index.css
