[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bcrypt>=4.2.0",
    "fastapi>=0.136.0",
    "httpx>=0.28.1",
    "openai>=2.32.0",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0.49",
    "tavily-python>=0.7.23",
    "uvicorn>=0.44.0",
    "websockets>=14.0",
    "yfinance>=0.2.58",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
